# shell2

./: CMakeLists.txt  README.md  ish++.code-workspace  test.sh
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  command.cpp  command.hpp  ish.cpp  main.cpp  parser.hpp  shell.cpp  shell.h
src-c/: CMakeLists.txt  command.c  command.h  ish.c  lexer.l  parser.y
test/: CMakeLists.txt  additional.test  basic-error.test  basic.test  builtin.test  corner.test  environment.test  ish-with-ishrc.sh  ishrc.ish  redirectin.txt  redirection-error.test  redirection.test  testscript.sh
